--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "mobx-react": "^6.1.1",
     "mobx-state-tree": "^3.14.1",
     "moment": "^2.24.0",
-    "native-base": "^2.13.8",
+    "native-base": "^2.13.12",
     "ramda": "0.26.1",
     "react": "16.8.6",
     "react-native": "0.60.5",
@@ -50,12 +50,13 @@
     "react-native-circular-progress": "^1.3.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-device-info": "^5.4.0",
+    "react-native-dialogflow": "^3.2.2",
     "react-native-drawer": "^2.5.1",
     "react-native-easy-content-loader": "^0.2.5",
     "react-native-easy-grid": "^0.2.2",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.3.0",
-    "react-native-gifted-chat": "^0.11.3",
+    "react-native-gifted-chat": "^0.11.4",
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-google-places": "^3.1.2",
     "react-native-google-places-autocomplete": "^1.3.9",
