--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
   },
   "dependencies": {
     "@mauron85/react-native-background-geolocation": "git+https://github.com/mauron85/react-native-background-geolocation.git",
-    "@react-native-community/async-storage": "^1.6.1",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
-    "@types/node": "^12.7.5",
+    "@types/node": "^12.12.42",
     "apisauce": "1.0.3",
     "i18n-js": "^3.0.11",
     "inspirational-quotes": "^1.0.8",
     "lodash": "^4.17.15",
     "lodash.throttle": "4.1.1",
-    "lottie-ios": "^3.1.3",
-    "lottie-react-native": "^3.2.1",
-    "mobx": "^4.13.0",
-    "mobx-react": "^6.1.1",
-    "mobx-state-tree": "^3.14.1",
-    "moment": "^2.24.0",
+    "lottie-ios": "^3.1.8",
+    "lottie-react-native": "^3.4.0",
+    "mobx": "^4.15.4",
+    "mobx-react": "^6.2.2",
+    "mobx-state-tree": "^3.16.0",
+    "moment": "^2.26.0",
     "native-base": "^2.13.12",
     "ramda": "0.26.1",
     "react": "16.8.6",
@@ -47,26 +47,26 @@
     "react-native-animated-loader": "0.0.8",
     "react-native-aws3": "0.0.9",
     "react-native-chatbot": "0.0.1-alpha.12",
-    "react-native-circular-progress": "^1.3.2",
+    "react-native-circular-progress": "^1.3.6",
     "react-native-datepicker": "^1.7.2",
-    "react-native-device-info": "^5.4.0",
+    "react-native-device-info": "^5.6.0",
     "react-native-dialogflow": "^3.2.2",
     "react-native-drawer": "^2.5.1",
-    "react-native-easy-content-loader": "^0.2.5",
+    "react-native-easy-content-loader": "^0.2.9",
     "react-native-easy-grid": "^0.2.2",
     "react-native-firebase": "^5.6.0",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^0.11.4",
     "react-native-google-maps-directions": "^2.1.1",
     "react-native-google-places": "^3.1.2",
-    "react-native-google-places-autocomplete": "^1.3.9",
+    "react-native-google-places-autocomplete": "^1.7.1",
     "react-native-image-picker": "^1.1.0",
     "react-native-image-placeholder": "^1.0.14",
-    "react-native-image-resizer": "^1.0.1",
+    "react-native-image-resizer": "^1.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-keychain": "3.1.3",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-localize": "^1.0.0",
+    "react-native-localize": "^1.4.0",
     "react-native-maps": "^0.25.0",
     "react-native-onesignal": "3.5.0",
     "react-native-percentage-circle": "^1.0.7",
@@ -75,25 +75,26 @@
     "react-native-svg": "^9.12.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-voice": "^0.3.0",
     "react-navigation": "3.11.1",
-    "react-redux": "^7.1.1",
+    "react-redux": "^7.2.0",
     "reactotron-mst": "^3.1.1",
-    "reactotron-react-native": "^4.0.0-beta.1",
+    "reactotron-react-native": "^4.0.3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
     "redux-persist-filesystem-storage": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
-    "styled-components": "^5.0.0-fixhoist",
+    "styled-components": "^5.1.0",
     "validate.js": "0.13.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@babel/runtime": "^7.5.5",
-    "@emotion/core": "^10.0.15",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-optional-catch-binding": "^7.8.3",
+    "@babel/runtime": "^7.9.6",
+    "@emotion/core": "^10.0.28",
     "@storybook/addon-storyshots": "5.1.11",
     "@storybook/react-native": "5.1.11",
     "@types/jest": "24.0.16",
@@ -109,18 +110,18 @@
     "detox": "^14.0.1",
     "emotion-theming": "^10.0.14",
     "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-native": "^3.6.0",
     "eslint-plugin-standard": "^4.0.0",
-    "ignite-bowser": "^4.7.0",
+    "ignite-bowser": "^4.14.3",
     "jest": "^24.9.0",
     "jetifier": "^1.6.1",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "metro-react-native-babel-preset": "^0.56.4",
     "npm-run-all": "4.1.5",
     "patch-package": "6.1.2",
     "postinstall-prepare": "1.0.1",
